--- a/Fractal - local/index.html
+++ b/Fractal - local/index.html
@@ -12,6 +12,28 @@
 	</head>
 	<body id="top">
 
+	<!-- Three -->
+			<section id="three" class="wrapper style2 special">
+				<header class="major">
+					<h2>TextTextText</h2>
+					<p>TextTextText<br />
+					TextTextText</p>
+				</header>
+				<ul class="actions">
+					<li><a href="#" class="button special icon fa-download">Download</a></li>
+					<li><a href="#" class="button">Learn More</a></li>
+				</ul>
+			</section>
+			<!-- Footer -->
+			<footer id="footer">
+				<ul class="icons">
+					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+				</ul>
+				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
+			</footer>
+			
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
@@ -37,4 +59,6 @@
 				</ul>
 				<p class="copyright">&copy; Untitled. Credits: <a href="http://html5up.net">HTML5 UP</a></p>
 			</footer>
+			
+			
 </html>
